--- a/.env
+++ b/.env
@@ -3,9 +3,10 @@ DBHOST=137.132.92.94
 DBUSER=fintechlab
 DBPASSWD=FinTechLab
 DBPORT=12865
-DBNAME=fintechbackendstub
+DBNAME=b13_group1
+
 # authentication (Auth0) environment variables
-ISSUER_BASE_URL=https://dev-9o8d56lo.us.auth0.com
-CLIENT_ID=yDQ1cKEgPA1X3DGzRfdn8gFkreYHElcs
-BASE_URL=http://localhost:3000
-SECRET=85JZv5HMsItUbNh8KUrGwOMYhk6Y-NA_
+# ISSUER_BASE_URL=https://dev-9o8d56lo.us.auth0.com
+# CLIENT_ID=yDQ1cKEgPA1X3DGzRfdn8gFkreYHElcs
+# BASE_URL=http://localhost:3000
+# SECRET=85JZv5HMsItUbNh8KUrGwOMYhk6Y-NA_
